src/assets/sass/modules/_layout-shared.scss
/* Globally shared layout
   ========================================================================== */

/**
 * 1. Prevent adjustments of font size after orientation changes in
 *    IE on Windows Phone and in iOS.
 */

html {
    /* 1 */
    text-size-adjust: 100%;
}

/**
 * 1. Add the correct box sizing in Firefox.
 * 2. Show the overflow in Edge and IE.
 */

hr {
    /* 1 */
    height: 0;
    margin: 1.5em 0;
    clear: both; // make sure any floats above `hr` are cleared
    border: 0; // remove the default `hr` border
    border-bottom: 1px solid $color-border;
    /* 2 */
    overflow: visible;
    /* 1 */
    box-sizing: content-box;
}

/**
 * 1. Add the correct display in IE 11.
 * 2. Add the correct vertical alignment in Chrome, Firefox, and Opera.
 */

progress {
    /* 1 */
    display: inline-block;
    /* 2 */
    vertical-align: baseline;
}

/**
 * Reverse the progress direction in RTL languages.
 */

[dir="rtl"] progress {
    animation-direction: reverse;
}

/**
 * Styled progress indicators.
 *
 * Example HTML:
 *
 * <progress class="txp-upload-progress"></progress>
 */

.txp-upload-progress {
    width: 100%;
    height: 8px;
    border: 1px solid $color-border;
    appearance: none;
    box-sizing: border-box;
}

.txp-upload-progress::-webkit-progress-value {
    background-color: $color-success-text;
}

.txp-upload-progress::-webkit-progress-bar {
    background-color: $color-background;
}

.txp-upload-progress:not([value])::-webkit-progress-bar {
    background-color: $color-border-light;
}

.txp-upload-progress::-moz-progress-bar {
    background-color: $color-success-text;
}

/**
 * Hide text but still allow screen reader access.
 *
 * Example HTML:
 *
 * <h1 class="txp-accessibility">
 */

.txp-accessibility {
    position: absolute;
    width: 1px;
    height: 1px;
    margin: -1px;
    padding: 0;
    border: 0;
    white-space: nowrap;
    overflow: hidden;
    clip: rect(0 0 0 0);
    clip-path: inset(50%);
}

/**
 * Drop down lists.
 *
 * 1. Ensure dropdowns are hidden at page load (prevents content 'jumping').
 *
 * <ul class="txp-dropdown">
 *     <li class="txp-dropdown-toggle-all">
 *         <div>
 *             <label><input class="checkbox" type="checkbox">&nbsp;Toggle all/none selected</label>
 *         </div>
 *     </li>
 *     <li>
 *         <div>
 *             <label><input class="checkbox active" type="checkbox">&nbsp;ID#</label>
 *         </div>
 *     </li>
 * </ul>
 */

.txp-dropdown {
    /* 1 */
    display: none;
    position: absolute;
    width: 18em; // 234px / 13px
    z-index: 100;
}

.txp-dropdown-toggle-all {
    border-bottom: 1px solid $color-border-light;
}

/**
 * Search widget at top of lists.
 *
 * Appears on:
 *
 * List panels.
 *
 * Example HTML:
 *
 * <form class="txp-search">
 *     <span class="txp-search-clear"><a>Clear search</a></span>
 *     <input class="txp-search-input" type="search" size="24">
 *     <span class="txp-search-buttons">
 *         <button class="txp-search-button">Search</button>
 *         <button class="txp-search-options">Search criteria</button>
 *     </span>
 * </form>
 */

.txp-search {
    display: flex;
    justify-content: flex-end;
    margin: 1em 0;

    .ui-menu {
        position: absolute;
        width: 18em; // 234px / 13px
        z-index: 100;
    }

    // Ensure the 2 buttons stay together.
    .ui-controlgroup {
        flex-wrap: nowrap;
    }

    // Ensure search dropdown lays above list options dropdown.
    .txp-dropdown {
        z-index: 101;
    }
}

.txp-search-clear {
    flex: 1;
    margin: auto 0.5em;
    text-align: right;

    [dir="rtl"] & {
        text-align: left;
    }
}

/**
 * Actions and upload forms at top of listings.
 *
 * Appears on:
 *
 * List panels.
 *
 * Example HTML:
 *
 * <div class="txp-control-panel">
 *     Content
 * </div>
 */

.txp-control-panel {
    margin-bottom: 1em;
    float: left;

    > * {
        margin: 0 1em 0 0;

        &:last-child {
            margin-right: 0;
        }
    }

    form {
        display: inline-block;
    }

    textarea {
        margin-bottom: 1em;
    }
}

/**
 * Swap float/margin positions in RTL languages.
 */

[dir="rtl"] .txp-control-panel {
    float: right;

    > * {
        margin: 0 0 0 1em;
    }
}

/**
 * List display options at top of listings.
 *
 * Appears on:
 *
 * List panels.
 *
 * Example HTML:
 *
 * <div class="txp-list-options">
 *     <a>List view</a>
 *     <a>Grid view</a>
 *     <a>List options</a>
 * </div>
 */

.txp-list-options {
    margin: 0.46153846153846em 0 1em; // 6px / 13px, 13px
    float: right;

    > * {
        margin: 0 0 0 1em;
    }

    form {
        display: inline-block;
    }
}

/**
 * Swap float/margin positions in RTL languages.
 */

[dir="rtl"] .txp-list-options {
    float: left;

    > * {
        margin: 0 1em 0 0;
    }
}

/**
 * Additonal action links ('Duplicate', 'View', etc.) on some panels.
 *
 * Appears on:
 *
 * Article write/edit panel, pages panel, forms panel, styles panel.
 *
 * Example HTML:
 *
 * <p class="txp-actions">
 *     <a class="txp-article-view">View</a>
 *     <a class="txp-clone">Duplicate</a>
 *     <a class="txp-new">Create new</a>
 * </p>
 */

.txp-actions a {
    display: inline-block;
    margin: 0.5em 1em 0 0;

    &:last-child {
        margin: 0.5em 0 0;
    }
}

/**
 * Swap margin positions in RTL languages.
 */

[dir="rtl"] .txp-actions a {
    margin: 0.5em 0 0 1em;

    &:last-child {
        margin: 0.5em 0 0;
    }
}

/**
 * Remove top margin when inside a dialog box.
 */

.ui-dialog .txp-actions {
    margin-top: 0;
}

/**
 * Inline the action links.
 *
 * Appears on:
 *
 * Article pages panel, forms panel, styles panel.
 */

.txp-actions-inline {
    margin-top: 1.30769230769231em; // 17px / 13px
    float: right;
}

/**
 * Swap position in RTL languages.
 */

[dir="rtl"] .txp-actions-inline {
    float: left;
}
/* ... */

